Auto-scroll functionality - fixed button detection
- Removed manual scroll tracking
- Added scrollToElement method
- Fixed last buttons not found issue
- Improved stability

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,22 @@
             <artifactId>extentreports</artifactId>
             <version>${extentreports.version}</version>
         </dependency>
+
+        <!-- ✅ JavaMail API - Email göndərmək üçün -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <!-- ✅ Activation API (JavaMail üçün lazım) -->
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
